--- a/www/index.html
+++ b/www/index.html
@@ -61,7 +61,7 @@
 
     
 
-    function show_content_old(){
+    function show_content(){
         var langvalue = '';
         //if($('select').is("#selectmenu")) langvalue = $('#selectmenu').val();
         if($('select').is("#selectmenu")) langvalue = $('#selectmenu option:selected').val();
@@ -83,10 +83,10 @@
         });
     }
 
-    function show_content(){
+/*     function show_content(){
         $( "#locale_sec" ).load( show_content_old() );
     }
-
+ */
     //    setInterval('show()', 3000);
     
 </script>
